--- a/back/makefile
+++ b/back/makefile
@@ -5,7 +5,7 @@ INTERPRETER_PORT = 8000
 LEXER_PORT = 8001
 SEMANTIC_PORT = 8002
 SYNTAX_PORT = 8003
-SINTACTIC_PORT = 8004
+SYNTACTIC_PORT = 8004
 
 # Inicializa o serviço do interpretador
 run-interpreter:
@@ -13,7 +13,7 @@ run-interpreter:
 
 # Inicializa o serviço do lexer
 run-lexer:
-	$(UVICORN) lexer.main:app --host 0.0.0.0 --port $(LEXER_PORT) --reload
+	$(UVICORN) lexical.main:app --host 0.0.0.0 --port $(LEXER_PORT) --reload
 
 # Inicializa o serviço do analisador semântico
 run-semantic:
@@ -21,19 +21,18 @@ run-semantic:
 
 # Inicializa o serviço da árvore sintática
 run-syntax-tree:
-	$(UVICORN) syntax_tree.main:app --host 0.0.0.0 --port $(SYNTAX_PORT) --reload
+	$(UVICORN) trees.main:app --host 0.0.0.0 --port $(SYNTAX_PORT) --reload
 
 # Inicializa o serviço do analisador sintático
-run-sintactic:
-	$(UVICORN) sintactic.main:app --host 0.0.0.0 --port $(SINTACTIC_PORT) --reload
+# run-syntactic:
+# 	$(UVICORN) syntactic.main:app --host 0.0.0.0 --port $(SYNTACTIC_PORT) --reload
 
 # Inicializa todos os serviços
 run-all:
 	@make run-interpreter &
 	@make run-lexer &
 	@make run-semantic &
-	@make run-syntax-tree &
-	@make run-sintactic &
+	@make run-syntax-tree
 
 # Instala as dependências
 install:
