[refactor]: update makefile to remove unused syntax tree service and correct run-all target

--- a/back/makefile
+++ b/back/makefile
@@ -4,7 +4,6 @@ UVICORN = uvicorn
 INTERPRETER_PORT = 8000
 LEXER_PORT = 8001
 SEMANTIC_PORT = 8002
-SYNTAX_PORT = 8003
 SYNTACTIC_PORT = 8004
 
 # Inicializa o serviço do interpretador
@@ -19,20 +18,16 @@ run-lexer:
 run-semantic:
 	$(UVICORN) semantic.main:app --host 0.0.0.0 --port $(SEMANTIC_PORT) --reload
 
-# Inicializa o serviço da árvore sintática
-run-syntax-tree:
-	$(UVICORN) trees.main:app --host 0.0.0.0 --port $(SYNTAX_PORT) --reload
-
 # Inicializa o serviço do analisador sintático
-# run-syntactic:
-# 	$(UVICORN) syntactic.main:app --host 0.0.0.0 --port $(SYNTACTIC_PORT) --reload
+run-syntactic:
+	$(UVICORN) syntactic.main:app --host 0.0.0.0 --port $(SYNTACTIC_PORT) --reload
 
 # Inicializa todos os serviços
 run-all:
 	@make run-interpreter &
 	@make run-lexer &
 	@make run-semantic &
-	@make run-syntax-tree
+	@make run-syntactic
 
 # Instala as dependências
 install:
