[feat}: create orchestrator

--- a/back/makefile
+++ b/back/makefile
@@ -5,6 +5,7 @@ INTERPRETER_PORT = 8000
 LEXER_PORT = 8001
 SEMANTIC_PORT = 8002
 SYNTACTIC_PORT = 8004
+ORCHESTRATOR_PORT = 8005
 
 # Inicializa o serviço do interpretador
 run-interpreter:
@@ -22,12 +23,16 @@ run-semantic:
 run-syntactic:
 	$(UVICORN) syntactic.main:app --host 0.0.0.0 --port $(SYNTACTIC_PORT) --reload
 
+run-orchestrator:
+	$(UVICORN) orchestrator.main:app --host 0.0.0.0 --port $(ORCHESTRATOR_PORT) --reload
+
 # Inicializa todos os serviços
 run-all:
 	@make run-interpreter &
 	@make run-lexer &
 	@make run-semantic &
-	@make run-syntactic
+	@make run-syntactic &
+	@make run-orchestrator
 
 # Instala as dependências
 install:
